<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">From the Owner</string>
    <string name="enter_money">Enter your money</string>
    <string name="start_button">Start</string>
    <string name="select_mood">Select your mood</string>
    <string name="buy">Buy Now</string>
    <string name="show_result2">Show Result</string>
    <string name="dialog_title">Summary of purchase</string>
    <string name="dialog_message">Confirm your purchase?</string>
    <string name="adjust_brigthness">Adjust Brightness</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="txt_show_money">Lets find a house appropriate to your money :  </string>
    <string name="btnLanguage">TR</string>
    <string name="toast_language_changed">Language successfully changed.</string>
    <string name="back_to_main">Back to Main</string>
    <string name="back_message">Returned from SecondActivity successfully!</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="cart">Cart</string>
    <string name="done">Done!</string>
</resources>